Fixes:
- [EuiSpacer] Don’t shrink
- [EuiScreenReaderOnly] Fixed position to not cause scrollbars

--- a/src/components/spacer/_spacer.scss
+++ b/src/components/spacer/_spacer.scss
@@ -7,6 +7,11 @@ $spacerSizes: (
   xxl: $euiSizeXXL,
 );
 
+.euiSpacer {
+  // Ensure it's height doesn't shrink/collapse when in a flex group
+  flex-shrink: 0;
+}
+
 @each $name, $size in $spacerSizes {
   .euiSpacer--#{$name} {
     height: $size;
